welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket: error: not found: value blueTicket
   t.setResult( blueTicket( t.getParameter(0).asInstanceOf[Int], t.getParameter(1).asInstanceOf[Int], t.getParameter(2).asInstanceOf[Int]) )
                ^blueTicket:2: error: not found: value public
public int blueTicket(int a, int b, int c) {
^